[tool.poetry]
name = "day1"
version = "1.0.0"
description = "AdventOfCode - Day 1"
authors = ["André Bruns <andre.bruns33@gmail.com>"]
readme = "README.md"
include = ["input.txt"]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.scripts]
day1 = 'day1.puzzle:puzzle'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
